--- a/.gitignore
+++ b/.gitignore
@@ -72,4 +72,5 @@ build/
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 example/pubspec.lock
-.gitignore
+
+pubspec.lock
